# fizko

./: .gitignore  .mcp.json  CLAUDE.md  DEPLOY.md  Dockerfile  MIGRATION_SUMMARY.md  PHONE_AUTH_SETUP_COMPLETE.md  PUSH_NOTIFICATIONS_SETUP.md  QUICKSTART.md  README.md  README_STYLING_ANALYSIS.md  RORK_PROMPT.md  STYLING_ANALYSIS.md  check_honorarios.py  package-lock.json  package.json  railway-services-guide.md  railway.beat.json  railway.json  railway.toml  railway.worker.json  test_phone_auth.sh  test_sii_sync.py  test_sii_sync_oct.py  vercel.json
backend/: .dockerignore  .env.example  .env.railway.example  .env.test  .gitignore  .railwayignore  ARCHITECTURE_SII.md  CELERY_DEPLOYMENT_GUIDE.md  CELERY_MEM0_FIX.md  CELERY_WORKER_ANALYSIS.md  CHANGELOG_previous_month_credit.md  DEV_BYPASS_AUTH.md  Dockerfile  EXPENSES_IMPLEMENTATION.md  F29_ANALYSIS_AND_DESIGN.md  F29_IMPLEMENTATION_SUMMARY.md  F29_PDF_DOWNLOAD_IMPLEMENTATION.md  KAPSO_SETUP.md  MEM0_404_ORPHAN_FIX.md  MEM0_EVENT_LOOP_FIX.md  NGROK_SETUP.md  RAILWAY_QUICKSTART.md  RAILWAY_SETUP.md  README.md  SUBSCRIPTION_MEMORY_COMPLETE.md  SUBSCRIPTION_MEMORY_OPTIMIZATION.md  WHATSAPP_AUTH_FRONTEND_GUIDE.md  WHATSAPP_TEMPLATE_SENDING.md  check_din_db.py  clean_mem0_orphans.py  dev.sh  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  docker.sh  gwt_analysis_output.txt  ngrok.yml  nixpacks.toml  propuesta_f29_3ee62c88-db13-4db9-bd74-1367f8c30e66_202510.json  pyproject.toml  (+31 more)
backend/app/: __init__.py  dependencies.py  main.py
backend/docs/: ACUSE_RECIBO.md  AGENTS_INFRASTRUCTURE.md  AGENTS_SETUP_COMPLETE.md  AGENT_SERVICES.md  AGENT_TOOLS_MIGRATION.md  API_DOCUMENTATION.md  CELERY_TASKS_API.md  CHAT_ROUTERS.md  DATABASE_SESSION_MANAGEMENT.md  DOCKER.md  DOCKER_CELERY.md  F29_CLICK_MITIGATION.md  F29_SYNC_REFACTOR.md  FORM29_DRAFT_TRACKING.md  FORM29_GENERATION_SYSTEM.md  GUARDRAIL_FIX.md  HOW_TO_CREATE_AN_AGENT.md  MEM0_WEBHOOK_FIX.md  MEMORY_INFRASTRUCTURE.md  NOTIFICATION_EXAMPLES.md  NOTIFICATION_SYSTEM.md  NUEVO_ENDPOINT_VERIFY.md  QUICKSTART.md  ROUTERS_COMPLETE.md  SERVICES_COMPLETE.md  SUBSCRIPTION_BASED_AGENTS.md  TESTING.md  UI_TOOLS_SUPABASE.md  VERIFY_ENDPOINT.md  WHATSAPP_AUTH_ARCHITECTURE.md  WHATSAPP_AUTH_FRONTEND_GUIDE.md  WHATSAPP_AUTH_QUICK_START.md  WHATSAPP_AUTH_USAGE.md  WHATSAPP_ENDPOINT_EXAMPLES.md  WHATSAPP_SEND_TO_PHONE_EXAMPLE.md  WHATSAPP_TEMPLATE_SETUP.md  WIDGET_STREAMING_OPTIMIZATION.md
backend/migrations/: 004_add_comprobante_pago_type.sql  006_add_unique_constraints.sql  007_add_phone_verification.sql  007_add_phone_verification_columns.sql  008_update_document_type_constraints.sql  009_encrypt_existing_sii_passwords.py  011_add_profile_trigger.sql  011_add_profile_trigger_APPLY_MANUALLY.sql  (+1 more)
(+1822 files in other folders)
