[project]
name = "sii-integration-service"
version = "2.0.0"
description = "Simplified SII integration service without database or authentication"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114.1,<0.116",
    "uvicorn[standard]>=0.36,<0.37",
    "openai>=1.40",
    "openai-chatkit",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.0.0",
    "selenium-wire>=5.1.0",
    "webdriver-manager>=4.0.0",
    "blinker<1.8",
    "setuptools>=68.0",
    "pypdf>=6.0.0",
    "python-dateutil>=2.8.0",
    "supabase>=2.0.0",
    "mem0ai>=1.0.0",
    # Celery dependencies
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy-celery-beat>=0.7.0",
    "kombu>=5.3.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver for Beat scheduler
    # Encryption for sensitive data (SII passwords)
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.4,<0.7",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
